packages/local_asr_apple/lib/src/apple_bindings.g.dart

// Generated by tool/ffigen.dart from bridge/lasr_apple.h. Do not
// edit by hand.
// ignore_for_file: type=lint
// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: unused_import, unused_element, deprecated_member_use_from_same_package
@ffi.DefaultAsset('package:local_asr_apple/lasr_apple')
library;

import 'dart:ffi' as ffi;

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Char>)>()
external void lasr_apple_free(ffi.Pointer<ffi.Char> text);

@ffi.Native<ffi.Int64 Function(ffi.Pointer<ffi.Char>, ffi.Int32)>()
external int lasr_apple_load(ffi.Pointer<ffi.Char> folder, int cpu_only);

@ffi.Native<ffi.Void Function(ffi.Int64)>()
external void lasr_apple_release(int handle);

@ffi.Native<ffi.Int32 Function()>()
external int lasr_apple_speech_available();

@ffi.Native<
  ffi.Pointer<ffi.Char> Function(
    ffi.Pointer<ffi.Float>,
    ffi.Int32,
    ffi.Pointer<ffi.Char>,
  )
>()
external ffi.Pointer<ffi.Char> lasr_apple_speech_transcribe(
  ffi.Pointer<ffi.Float> samples,
  int count,
  ffi.Pointer<ffi.Char> language,
);

@ffi.Native<
  ffi.Pointer<ffi.Char> Function(ffi.Int64, ffi.Pointer<ffi.Float>, ffi.Int32)
>()
external ffi.Pointer<ffi.Char> lasr_apple_transcribe(
  int handle,
  ffi.Pointer<ffi.Float> samples,
  int count,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function()>()
external ffi.Pointer<ffi.Char> lasr_apple_version();
